# oasis-sdk

./: .dockerignore  .gitignore  .golangci.yml  .markdownlint.yml  .rustfmt.toml  Cargo.toml  README.md  crates.js  package-lock.json  package.json  rust-toolchain.toml  search-index.js  settings.html  source-files.js  test.txt
client-sdk/rust/: Cargo.toml
client-sdk/rust/src/: client.rs  lib.rs  requests.rs  signer.rs  types.rs
client-sdk/rust/src/wallet/: dummy.rs  ed25519.rs  mod.rs  nonce_provider.rs
contract-sdk/: Cargo.toml
contract-sdk-macros/: Cargo.toml
contract-sdk-macros/src/: error_derive.rs  event_derive.rs  lib.rs  test_utils.rs  util.rs
contract-sdk/crypto/: Cargo.toml
contract-sdk/crypto/src/: deoxysii.rs  ecdsa.rs  lib.rs  x25519.rs
contract-sdk/specs/access/oas173/: Cargo.toml  README.md
contract-sdk/specs/oas20/: Cargo.toml  README.md
contract-sdk/specs/oas20/contract/: Cargo.toml
contract-sdk/specs/oas20/src/: helpers.rs  lib.rs  types.rs
contract-sdk/specs/oas20/types/: Cargo.toml
contract-sdk/specs/token/oas20/: Cargo.toml  README.md
contract-sdk/src/: context.rs  contract.rs  env.rs  error.rs  event.rs  exports.rs  lib.rs  memory.rs  storage.rs  testing.rs
contract-sdk/src/abi/: crypto.rs  dispatch.rs  env.rs  mod.rs  storage.rs  version.rs
contract-sdk/storage/: Cargo.toml
contract-sdk/storage/src/: cell.rs  lib.rs  map.rs
contract-sdk/types/: Cargo.toml
contract-sdk/types/src/: address.rs  crypto.rs  env.rs  event.rs  lib.rs  message.rs  storage.rs  testing.rs  token.rs
contract-sdk/types/src/modules/: contracts.rs  mod.rs
examples/contract-sdk/c10l-hello-world/: Cargo.toml  rust-toolchain.toml
examples/contract-sdk/c10l-hello-world/src/: lib.rs
examples/runtime-sdk/rofl-oracle/: .gitignore  Cargo.toml  policy.yml  policy2.yml  rust-toolchain.toml
examples/runtime-sdk/rofl-oracle-tdx/: Cargo.toml  rust-toolchain.toml
examples/runtime-sdk/rofl-oracle-tdx-raw/: Cargo.toml  contracts  rofl.yaml  rust-toolchain.toml
examples/runtime-sdk/rofl-oracle-tdx-raw/.cargo/: audit.toml
examples/runtime-sdk/rofl-oracle-tdx-raw/src/: main.rs
examples/runtime-sdk/rofl-oracle-tdx/src/: main.rs
examples/runtime-sdk/rofl-oracle/oracle/: README.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml
examples/runtime-sdk/rofl-oracle/src/: main.rs
rofl-app-core/: Cargo.toml
rofl-app-core/src/: client.rs  env.rs  lib.rs  notifier.rs  prelude.rs  processor.rs  registration.rs  secrets.rs  watchdog.rs
rofl-app-core/src/init/: mod.rs  tdx.rs
rofl-appd/: Cargo.toml
rofl-appd-localnet/: Cargo.toml  rofl.yaml  rust-toolchain.toml
rofl-appd-localnet/src/: main.rs
rofl-appd/src/: lib.rs  main.rs  state.rs  tx_prep.rs  types.rs
rofl-appd/src/routes/: app.rs  keys.rs  metadata.rs  mod.rs  query.rs  tx.rs
rofl-appd/src/services/: kms.rs  metadata.rs  mod.rs
rofl-client/py/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
rofl-client/py/examples/: basic_usage.py
rofl-client/py/src/oasis_rofl_client/: __about__.py  __init__.py  async_rofl_client.py  common.py  rofl_client.py
rofl-client/py/tests/: test_async_client.py  test_client.py
rofl-client/rs/: CHANGELOG.md  Cargo.toml  README.md
rofl-client/rs/examples/: basic.rs
rofl-client/rs/src/: lib.rs
rofl-containers/: Cargo.toml
rofl-containers/src/: containers.rs  main.rs  proxy.rs  reaper.rs  secrets.rs  storage.rs  utils.rs
rofl-containers/src/proxy/: compose.rs  firewall.rs  mod.rs
rofl-containers/src/storage/: luks2.rs  mod.rs
rofl-proxy/: Cargo.toml
rofl-proxy/fuzz/: sni.rs
rofl-proxy/src/: lib.rs
rofl-proxy/src/http/: mod.rs  proxy.rs  sni.rs  tls.rs
rofl-proxy/src/wireguard/: mod.rs  pool.rs
rofl-scheduler/: .gitignore  Cargo.toml  README.md  rofl.yaml
rofl-scheduler/src/: client.rs  config.rs  main.rs  manager.rs  manifest.rs  proxy.rs  qcow2.rs  state.rs  types.rs
rofl-scheduler/src/proxy/: domain.rs  mod.rs
rofl-scheduler/src/serverd/: auth.rs  error.rs  mod.rs  routes.rs  tls.rs
rofl-utils/: Cargo.toml
rofl-utils/src/: https.rs  lib.rs
runtime-sdk/: Cargo.toml  README.md
runtime-sdk-macros/: Cargo.toml
runtime-sdk-macros/src/: error_derive.rs  event_derive.rs  evm_derive.rs  generators.rs  handler_attrs.rs  handlers_attr.rs  lib.rs  method_handler_derive.rs  test_utils.rs  version_from_cargo.rs
runtime-sdk-macros/src/module_derive/: method_handler.rs  migration_handler.rs  mod.rs  module.rs
runtime-sdk/modules/: README.md
runtime-sdk/modules/contracts/: Cargo.toml  README.md  adr.md
runtime-sdk/modules/contracts/src/: code.rs  lib.rs  results.rs  store.rs  test.rs  types.rs  wasm.rs
runtime-sdk/modules/evm/: Cargo.toml  README.md
runtime-sdk/modules/evm-new/: Cargo.toml
runtime-sdk/modules/evm-new/src/: db.rs  derive_caller.rs  lib.rs  mock.rs  raw_tx.rs  signed_call.rs  test.rs  types.rs
runtime-sdk/modules/evm/benches/: criterion_benchmark.rs
runtime-sdk/modules/evm/fuzz/: README.md  precompile.rs  precompile_contract_dispatch.rs  precompile_contract_dispatch_corpus.rs  precompile_corpus.rs
runtime-sdk/modules/evm/src/: backend.rs  derive_caller.rs  evm_backend.rs  lib.rs  mock.rs  precompile.rs  raw_tx.rs  signed_call.rs  (+4 more)
runtime-sdk/modules/rofl-market/: Cargo.toml
runtime-sdk/src/: callformat.rs  config.rs  context.rs  dispatcher.rs  enclave_rpc.rs  error.rs  event.rs  history.rs  keymanager.rs  lib.rs  module.rs  runtime.rs  schedule_control.rs  sender.rs  state.rs  subcall.rs  testing.rs
runtime-sdk/src/crypto/: mod.rs  random.rs
runtime-sdk/src/modules/: mod.rs
runtime-sdk/src/storage/: confidential.rs  current.rs  empty.rs  hashed.rs  host.rs  mkvs.rs  mod.rs  overlay.rs  prefix.rs  typed.rs
runtime-sdk/src/testing/: keymanager.rs  keys.rs  mock.rs  mod.rs
runtime-sdk/src/types/: address.rs  callformat.rs  in_msg.rs  message.rs  mod.rs  token.rs  transaction.rs
tests/contracts/bench/: Cargo.toml
tests/contracts/hello/: Cargo.toml  hello.wasm
tests/contracts/wormhole-token-bridge/: Cargo.toml
tests/runtimes/benchmarking/: Cargo.toml
(+5590 files in other folders)
