[workspace]
members = [
    # Runtime SDK Core.
    "runtime-sdk",
    "runtime-sdk-macros",

    # Runtime SDK Modules.
    "runtime-sdk/modules/contracts",
    "runtime-sdk/modules/evm",

    # Smart Contract SDK.
    "contract-sdk",
    "contract-sdk/crypto",
    "contract-sdk/types",
    "contract-sdk/storage",
    "contract-sdk-macros",

    # Test runtimes.
    "tests/runtimes/benchmarking",
    "tests/runtimes/simple-keyvalue",
    "tests/runtimes/simple-consensus",
    "tests/runtimes/simple-evm",
    "tests/runtimes/simple-contracts",
]
exclude = [
    # Test contracts.
    "tests/contracts",

    # OAS contracts.
    "contract-sdk/specs/oas20/contract",
]
resolver = "2"
