[package]
name = "oasis-contract-sdk-macros"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.13.1"
proc-macro2 = "1.0.28"
quote = "1.0.10"
syn = "1.0.80"
proc-macro-crate = "1.0.0"

[dev-dependencies]
diff = "0.1.12"
syn = { version = "1.0.80", features = ["extra-traits"] }
