[package]
name = "rofl-app-core"
version = "0.0.0"
edition = "2021"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../runtime-sdk" }
oasis-runtime-sdk-rofl-market = { path = "../runtime-sdk/modules/rofl-market" }

# Third party.
anyhow = "1.0.86"
async-trait = "0.1.77"
base64 = "0.22.1"
rand = "0.8.5"
slog = "2.7.0"
tokio = { version = "1.38", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }

[features]
# TDX build.
tdx = ["oasis-runtime-sdk/tdx"]
# Enables mock SGX in non-SGX builds.
debug-mock-sgx = ["oasis-runtime-sdk/debug-mock-sgx"]
