[package]
name = "rofl-containers"
version = "0.0.0"
edition = "2021"

[dependencies]
# Oasis SDK.
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../runtime-sdk", features = ["tdx"] }
rofl-app-core = { path = "../rofl-app-core", features = ["tdx"] }
rofl-appd = { path = "../rofl-appd", features = ["tdx"] }
rofl-proxy = { path = "../rofl-proxy" }

# Third party.
anyhow = "1.0.86"
base64 = "0.22.1"
byteorder = "1.5.0"
cmd_lib = "1.9.5"
hex = "0.4.3"
libc = "0.2.172"
nix = { version = "0.29.0", features = ["signal", "ioctl"] }
rustables = "0.8.7"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
tokio = { version = "1.38", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
yaml-rust2 = "0.10.3"
