[package]
name = "rofl-scheduler"
version = "0.0.0"
edition = "2021"

[dependencies]
# Oasis SDK.
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../runtime-sdk", features = ["tdx"] }
oasis-runtime-sdk-rofl-market = { path = "../runtime-sdk/modules/rofl-market" }

# Third party.
anyhow = "1.0.86"
async_zip = { version = "0.0.17", features = ["deflate", "tokio"] }
backoff = "0.4"
base64 = "0.22.1"
bytes = "1.10.1"
cmd_lib = "1.9.5"
hex = "0.4.3"
nix = { version = "0.29.0", features = ["signal"] }
oci-client = "0.14.0"
qcow2-rs = "0.1.6"
rand = "0.8.4"
rustc-hex = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
