[package]
name = "rofl-scheduler"
version = "0.0.0"
edition = "2021"

[dependencies]
# Oasis SDK.
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../runtime-sdk", features = ["tdx"] }
oasis-runtime-sdk-rofl-market = { path = "../runtime-sdk/modules/rofl-market" }

# Third party.
anyhow = "1.0.86"
async_zip = { version = "0.0.17", features = ["deflate", "tokio"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
cmd_lib = "1.9.5"
hex = "0.4.3"
# TODO: Use 0.8.0 once released.
instant-acme = { git = "https://github.com/djc/instant-acme", rev = "5e59869f54e66b7dff8c2c0ea63599fbcc3595af" }
jsonwebtoken = "9"
nix = { version = "0.29.0", features = ["signal"] }
oci-client = "0.14.0"
qcow2-rs = "0.1.6"
rand = "0.8.4"
rcgen = "0.13.2"
rustc-hex = "2.0.1"
rustls = "0.23.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
siwe = "0.6.1"
thiserror = "2"
tokio = { version = "1.38", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
tokio-util = { version = "0.7.14", features = ["compat"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
x509-parser = "0.17.0"
