[package]
name = "rofl-scheduler"
version = "0.0.0"
edition = "2021"

[dependencies]
# Oasis SDK.
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../runtime-sdk", features = ["tdx"] }
oasis-runtime-sdk-rofl-market = { path = "../runtime-sdk/modules/rofl-market" }
rofl-app-core = { path = "../rofl-app-core", features = ["tdx"] }
rofl-proxy = { path = "../rofl-proxy" }

# Third party.
anyhow = "1.0.86"
async_zip = { version = "0.0.17", features = ["deflate", "tokio"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.41"
cmd_lib = "1.9.5"
futures-util = "0.3.31"
hex = "0.4.3"
hickory-resolver = { version = "0.25.2", features = ["https-aws-lc-rs", "dnssec-aws-lc-rs", "webpki-roots"] }
jsonwebtoken = "9"
nix = { version = "0.29.0", features = ["signal"] }
oci-client = "0.15.0"
rand = "0.8.4"
rcgen = "0.14.2"
rustc-hex = "2.0.1"
rustls = "0.23.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
siwe = "0.6.1"
thiserror = "2"
tiny-keccak = { version = "2.0.2", features = ["sha3", "tuple_hash"] }
tokio = { version = "1.38", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
tokio-mpmc = "0.2.4"
tokio-util = { version = "0.7.14", features = ["compat", "rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
x509-parser = "0.17.0"
