[package]
name = "oasis-runtime-sdk-macros"
version = "0.3.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.9"
proc-macro2 = "1.0.85"
quote = "1.0.10"
syn = "2.0.66"
hex = "0.4.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
difference = "2.0.0"
syn = { version = "2.0.66", features = ["extra-traits"] }
