[package]
name = "oasis-runtime-sdk"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.2.1", package = "oasis-cbor" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.3.6" }
oasis-core-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.3.6" }
oasis-core-keymanager-api-common = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.3.6" }
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.3.6" }
oasis-runtime-sdk-macros = { path = "../runtime-sdk-macros", optional = true }

# Third party.
byteorder = "1.4.3"
curve25519-dalek = "3.2.0"
digest = "0.9.0"
sha2 = "0.10.1"
sha3 = { version = "0.9", default-features = false }
k256 = { version = "0.9.6" }
schnorrkel = "0.10.2"
thiserror = "1.0.30"
hex = "0.4.2"
io-context = "0.2.0"
anyhow = "1.0.50"
bech32 = "0.8.1"
num-traits = "0.2.14"
impl-trait-for-tuples = "0.2.1"
base64 = "0.13.0"
once_cell = "1.8.0"
slog = "2.7.0"
tiny-keccak = { version = "2.0", features = ["tuple_hash"] }
tokio = { version = "1", features = ["rt"] }

[features]
default = ["oasis-runtime-sdk-macros"]
unsafe-allow-debug = []
