[package]
name = "oasis-runtime-sdk"
version = "0.14.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v25.2" }
oasis-core-keymanager = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v25.2" }
oasis-runtime-sdk-macros = { path = "../runtime-sdk-macros", optional = true }

# Third party.
async-trait = "0.1.77"
byteorder = "1.4.3"
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.0.0", features = ["digest", "hazmat"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
digest = "0.10.3"
hmac = "0.12.1"
sha2 = "0.10.8"
sha3 = { version = "0.10.1", default-features = false }
k256 = "0.13.1"
p256 = "0.13.2"
p384 = { version = "0.13.0", default-features = false, features = ["std", "ecdsa"] }
schnorrkel = "0.11.2"
merlin = "3.0.0"
thiserror = "1.0.61"
hex = "0.4.2"
anyhow = "1.0.86"
bech32 = "0.11.0"
num-traits = "0.2.14"
impl-trait-for-tuples = "0.2.1"
base64 = "0.22.1"
once_cell = "1.8.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false }
slog = "2.7.0"
tiny-keccak = { version = "2.0", features = ["tuple_hash"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tokio-retry = "0.3.0"
zeroize = "1.8"
lru = "0.12.3"

[dev-dependencies]
blake3 = { version = "1.5.1", features = ["traits-preview"] }

[features]
default = ["oasis-runtime-sdk-macros"]
unsafe-allow-debug = []
test = []
# TDX build.
tdx = ["oasis-core-runtime/tdx"]
# Enables debug-level logging in release builds.
debug-logging = [
	"oasis-core-runtime/debug-logging",
	"slog/max_level_debug",
	"slog/release_max_level_debug",
]
# Enables mock SGX in non-SGX builds.
debug-mock-sgx = [
	"oasis-core-runtime/debug-mock-sgx",
	"oasis-core-keymanager/debug-mock-sgx",
]
