
[package]
name = "oasis-contract-sdk-crypto"
description = "A collection of types and cryptography helpers for the Oasis Contract SDK."
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../../runtime-sdk" }

# Third party.
k256 = { version = "0.10.4", default-features = false, features = ["keccak256", "ecdsa"] }
thiserror = "1.0.30"
x25519-dalek = "1.1.0"
sha2 = "0.9.8"
hmac = "0.11.0"

[dev-dependencies]
hex = "0.4.2"
