[package]
name = "oasis-contract-sdk-crypto"
description = "A collection of types and cryptography helpers for the Oasis Contract SDK."
version = "0.3.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../../runtime-sdk" }

# Third party.
k256 = "0.13.1"
thiserror = "1.0.61"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.8"
hmac = "0.12.1"

[dev-dependencies]
hex = "0.4.2"
