[package]
name = "oasis-contract-sdk-types"
description = "A collection of types for the Oasis Contract SDK."
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.2.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../../runtime-sdk", optional = true }

# Third party.
bech32 = "0.8.1"
thiserror = "1.0.30"

[dev-dependencies]
hex = "0.4.2"
