[project]
name = "oasis-rofl-client"
dynamic = ["version"]
description = "Python client SDK for Oasis ROFL."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "rube-de", email = "bernhard@oasisprotocol.org" },
]

license = { text = "Apache-2.0" }
keywords = ["oasis", "rofl", "client", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.8.4",
]

[project.urls]
Homepage = "https://github.com/oasisprotocol/oasis-sdk/tree/main/rofl-client/py"
Repository = "https://github.com/oasisprotocol/oasis-sdk/tree/main/rofl-client/py"
Issue_tracker = "https://github.com/oasisprotocol/oasis-sdk/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
root = "../.." 
tag_regex = '^rofl-client/py/v(?P<version>\d+\.\d+\.\d+(?:[\w.-]*)?)$'

[tool.hatch.build.hooks.vcs]
version-file = "src/oasis_rofl_client/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/oasis_rofl_client"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py39"
include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator instead of if-else
]

exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "src/oasis_rofl_client/_version.py",  # Auto-generated by setuptools-scm
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"examples/*" = ["F401"]
"src/oasis_rofl_client/_version.py" = ["UP035", "UP006"]  # Auto-generated file

[tool.ruff.lint.isort]
known-first-party = ["oasis_rofl_client"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false