[package]
name = "oasis-rofl-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for ROFL appd (Unix domain socket HTTP)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"