[package]
name = "oasis-runtime-sdk-contracts"
description = "Smart contracts module for the Oasis Runtime SDK."
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-contract-sdk-crypto = { path = "../../../contract-sdk/crypto" }
oasis-contract-sdk-types = { path = "../../../contract-sdk/types", features = ["oasis-runtime-sdk"] }
oasis-runtime-sdk = { path = "../.." }

# Internal Wasm3 bindings.
wasm3 = { git = "https://github.com/oasisprotocol/wasm3-rs", tag = "v0.3.1" }

# Third party.
anyhow = "1.0"
blake3 = { version = "~1.3.1", features = ["traits-preview"] }
lru = "0.8.0"
num-traits = "0.2.14"
once_cell = "1.8.0"
rand_core = { version = "0.6.4", default-features = false }
snap = "1"
thiserror = "1.0"
walrus = "0.19.0"

[dev-dependencies]
wat = "1.0"
k256 = { version = "0.10.4", default-features = false, features = ["keccak256", "ecdsa"] }
hex = "0.4.2"
wasmprinter = "0.2.41"
pretty_assertions = "1.3.0"

[features]
debug-utils = []
benchmarks = [] # Enable inline benchmarks for use with `cargo bench`.
